- Abbreviations for applied constant now propagate the implicit arguments
  and arguments scope of the underlying reference (possible source of
  incompatibilities generally solvable by changing such abbreviations from
  e.g. "Notation foo' := (foo x)" to "Notation foo' y := (foo x (y:=y))").
- The "where" clause now supports multiple notations per defined object.

Vernacular commands

- New command "Timeout <n> <command>." interprets a command and a timeout
  interrupts the interpretation after <n> seconds.
- Option -R now supports binding Coq root read-only.
- New support for local binders in the syntax of Record/Structure fields.
- Most commands referring to constant (e.g. Print or About) now support
  referring to the constant by a notation string.
- Added "Reserved Infix" as a specific shortcut of the corresponding
  "Reserved Notation".
- Open/Close Scope command supports Global option in sections.
- Ltac definitions support Local option for non-export outside modules.
- Made generation of boolean equality automatic for datatypes (use
  "Unset Boolean Equality Schemes" for deactivation).
- Made support for automatic generation of case analysis schemes and
  congruence schemes available to user (governed by options "Unset
  Case Analysis Schemes" and "Unset Congruence Schemes").
- Fixpoint/CoFixpoint now support building part or all of bodies using tactics.
- Declaring axiomatic type class instances in Module Type should be now
  done via new command "Declare Instance", while the syntax "Instance"
  now always provides a concrete instance, both in and out of Module Type.
- Include Type is now deprecated since Include now accept both modules and
  module types. 
- Declare ML Module supports Local option.
- New command "(Global?) Generalizable [All|No] Variable(s)? ident(s)?" to
  declare which identifiers are generalizable in `{} and `() binders.
- New command "Print Opaque Dependencies" to display opaque constants in