@@ -50,10 +50,14 @@ type ('lev,'pos) constr_entry_key_gen =
   | ETOther of string * string
   | ETConstrList of ('lev * 'pos) * Token.pattern list
 
-type constr_prod_entry_key =
-    (production_level,production_position) constr_entry_key_gen
+(* Entries level (left-hand-side of grammar rules) *)
 type constr_entry_key =
     (int,unit) constr_entry_key_gen
+
+(* Entries used in productions (in right-hand-side of grammar rules) *)
+type constr_prod_entry_key =
+    (production_level,production_position) constr_entry_key_gen
+
+(* Entries used in productions, vernac side (e.g. "x bigint" or "x ident") *)
 type simple_constr_prod_entry_key =
     (production_level,unit) constr_entry_key_gen
-
